# BAG-Stresser

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  MODEL_FILTER.md  README.md  capacity_common.py  capacity_tester.py  entrypoint.sh  enumerate_models.py  example_session.py  example_stresser.py  incremental_test.py  main.py  model_filter.txt  model_filter.txt.example  multi_session.py  pyproject.toml  stresser.py  test_multi_session.py  test_session.py  test_stresser.py
conversations/: conversation_01.json  conversation_02.json  conversation_03.json  conversation_04.json  conversation_05.json  conversation_06.json  conversation_07.json  conversation_08.json  conversation_09.json  conversation_10.json
